--- a/reproduce-results.qmd
+++ b/reproduce-results.qmd
@@ -10,9 +10,11 @@ execute:
 author: "Pedro Nascimento de Lima"
 ---
 
+
+
 # Reproducibility notes
 
-This `quarto` document can be used to reproduce the results presented in *Nascimento de Lima et al. (2024). The value of environmental surveillance for pandemic response*. For details on how to install dependencies, see the `README.md` file. Before attempting to run this document, install all dependencies and run the `run_analysis.R` script. You should be able to reproduce all figures and tables from our paper using this document on a modern laptop within 30 minutes.
+This `quarto` document produces the results presented in *Nascimento de Lima et al. (2024). The value of environmental surveillance for pandemic response*. For details on how to install dependencies, see the `README.md` file. Before attempting to run this document, install all dependencies and run the `run_analysis.R` script. You should be able to reproduce all figures and tables from our paper using this document on a modern laptop within 30 minutes.
 
 # Running the model
 
@@ -29,12 +31,32 @@ if(!file.exists("./output/r.rds")) {
 
 ```
 
+# Scenarios
+Supplementary Table 1 provides details on parameter values used under our baseline scenario. The baseline scenario with conventional surveillance assumes a syndromic surveillance system based upon confirmed case counts, and there is a thirteen-day time span from exposure to the pathogen to detection by the public health authority. This thirteen-day lag covers the disease incubation phase (6.6 days)(cite) and testing and reporting delays (6 days).(cite) Consistent with estimates from the COVID-19 pandemic, the conventional surveillance system has a 30% case ascertainment rate.(cite) We assume the environmental sampling system can provide absolute, unbiased disease incidence estimates that lead the case counts by five days in the base-case scenario. We explore longer and shorter lead times, as this lag depends on  two to ten days. We use 5 days as the base-case scenario, as wastewater surveillance systems have been able to demonstrate. (cite) Moreover, this analysis assumed that all the populations within the jurisdictions are covered by the EWS (or equivalently, that the sampled population is a representative sample of all the population).
+
+# Population
+The model simulates disease percolating through six interconnected jurisdictions that independently make nonpharmaceutical decisions. Individuals can travel and work across jurisdiction lines, and the six jurisdictions each have a population of 10^6 individuals. Mortality parameters were chosen to reflect mortality rates observed in the United States during the first year of the COVID-19 pandemic, hence our results can be interpreted as expected outcomes for a cluster of US counties.
+
+# Outcomes
+The average mortality per 100,000 population across the jurisdiction is the primary health outcome in this study. We also compute the cost of illness due to disease, using SARS-Cov-2 as the base-case scenario. We also account for economic costs caused by the nonpharmaceutical interventions introduced (discussed in the Supplementary Appendix). All outcomes are computed over a one-year time frame from the pandemic onset and are averages computed across the jurisdictions in our model. Since the model is stochastic, we simulate the model 1,000 times and present means and 95% prediction intervals (computed with the 2.5% and the 97.5% percentiles) of each outcome.
+
+# Inter-jurisdiction mixing
+We use the following approach to align a 
+
+# Calibration: Add as a footnote to tau.
+We use parameter estimates from the literature whenever possible (Supplementary Table 1). Parameters that are unobserved in the data, notably tau and. R0 is computed based on disease progression rates. We calibrate only the $tau$ parameter, which is highly heterogeneous and context-dependent (cite Laura), to match the number of deaths observed during the first year in the United States. We find that $tau = 0.137$. We explore the implication of a wider range of policy effectiveness in sensitivity analyses, and explore this particular parameter in more details. Surprisingly, the policy effectiveness  
+
+## Sensitivity Analyses
+We explore the performance of the EWS under conditions that depart from COVID-19 by varying model parameters one at a time, aiming to represent a new emerging pathogen against which the population has no immunity. Since a probabilistic characterization of uncertainty to parameters is elusive, we refrain from making probabilistic statements 
+
+ 
+
 # Results
 
 ## Value of EWS under baseline assumptions
 
 <!--EWS systems provide meaningful value under base-case assumptions representing a hypothetical new pandemic with parameters mirroring those of SARS-Cov-2. -->
-Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). The unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to ilness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
+Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). The unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to illness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
 
 If policymakers follow the base-case NPI policy simulated in this paper, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` deaths per 100,000 population if no enhanced early-warning system (EWS) is adopted (NPIs w/o EWS scenario). As it was the case during the COVID-19 pandemic, such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` per person.
 
@@ -45,11 +67,11 @@ If policymakers follow the base-case NPI policy simulated in this paper, the dea
 gt::gt(r$table_1)
 ```
 
-Notes: All costs are expressed as 2020 dollars per person. All outcomes were computed over a one-year time-frame.
+Notes: All costs are expressed as 2020 dollars per person. All outcomes were computed over a one-year time frame.
 
-Under base-case assumptions, EWS provide net-positive value to society because they enhance the effectiveness of NPIs (i.e., preventing illness and death) more than they increase the burden of additional interventions introduced due to the early warning. Even an early warning system that provides only a 2-day early warning relative to a baseline pandemic response system (NPI + 2-day EWS scenario) is projected to reduce the pandemic death toll from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 2-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population. Health benefits increase if the system can provide earlier  warning. A system that provides a 5-day early warning (NPIs + 5-day EWS scenario) would be projected to result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population, and a 10-day early warning would result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 10-day EWS", variable == "deaths_per_100k")` deaths per 100,000 people.
+Under baseline assumptions, the EWS provides net-positive value to society because they enhance the effectiveness of NPIs (i.e., preventing illness and death) more than they increase the costs of additional interventions introduced due to the early warning. Even an early warning system that provides only a 2-day early warning relative to a conventional pandemic response system (NPI + 2-day EWS scenario) is projected to reduce the pandemic death toll from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 2-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population. Health benefits increase if the system can provide earlier warning. A system that provides a 5-day early warning (NPIs + 5-day EWS scenario) would be projected to result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population, and a 10-day early warning would result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 10-day EWS", variable == "deaths_per_100k")` deaths per 100,000 people.
 
-The use of early warning would however result in earlier public health intervention, increasing the number of days of under NPIs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "L1plus_days")` days for a system providing a 5-day early warning signal. That said, the number of days at the *maximum* intervention level (i.e., a lockdown) was projected to *decrease* with the use of the early warning system, as earlier action prevented surges from reaching alarming levels that prompted blunt interventions. For example, a system that provided a 5-day early warning reduced the number of days under the maximum intervention level from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "L5_days")` days. Still, the net effect of early warning system was to marginally increase NPI intervention costs, from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "CNPI")` dollars per person, assuming a 5-day early warning. Health and economic outcomes weighted, the early warning system reduced the total pandemic costs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "C")` dollars per person. The difference between the two costs can be interpreted as the net-monetary benefit of the system, which is estimated at `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "NMB")` dollars per person in the first year of the pandemic.
+The use of early warning would result in earlier public health intervention, increasing the number of days of under NPIs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "L1plus_days")` days for a system providing a 5-day early warning signal. That said, the number of days at the *maximum* intervention level (i.e., a lockdown) was projected to *decrease* with the early warning system, as earlier action prevented surges from reaching alarming levels that prompted blunt interventions. For example, a system that provided a 5-day early warning reduced the number of days under the maximum intervention level from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "L5_days")` days. Still, the net effect of the EWS was to marginally increase NPI intervention costs, from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "CNPI")` dollars per person, assuming a 5-day early warning. Health and economic outcomes weighted, the early warning system reduced the total pandemic costs from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "C")` dollars per person. The difference between the two costs is the net-monetary benefit of the system, which is estimated at `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "NMB")` dollars per person in the first year of the pandemic.
 
 <!--
 Points from this section for discussion:
@@ -72,22 +94,24 @@ A pathogen that is 50% more transmissible than wild-type SARS-Cov-2 would pose a
 plot(r$fig_A_epi)
 ```
 
-
 Other socio-economic and contextual variables also have a meaningful effect on the value of EWS for pandemic response, including NPI costs, NPI effectiveness, decision lags and the stringency with which decision-makers introduce nonpharmaceutical interventions (Supplementary Figure 1).
 
 ### Policy lags and stringency
 
 Longer decision and implementation lags have an overall negative effect on the total costs of the pandemic, longer decision lags also would *increase* the net benefit of EWS systems for pandemic response. Our base-case scenario assume that decision-makers take one week to decide and implement non-pharmaceutical interventions. If instead policymakers took two weeks to introduce and implement interventions, the total pandemic cost increases from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == T)` dollars per person, assuming conventional surveillance. The early warning system effectively helps to roll-back decision lags, reducing total costs to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == F)` dollars per person, yielding a NMB of `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "NMB", NMB_comparator == F)` relative to conventional surveillance. Conversely, in contexts where NPI implementation is swift (i.e, decisions are made within 3 days), the NMB of EWS would be lower but still positive at `r pull_estimate(r$table_1_long_all, Scenario == "3-day decision lag", variable == "NMB", NMB_comparator == F)` dollars per person.
 
-Policy stringency (i.e., how stringent the case thresholds used to introduce or remove interventions) has a similar effect on the value of EWS relative to decision lags - the EWS provides the most value under the conditions that are least desirable for prevention of disease. In a context where decision makers are 50% more stringent than in our base-case assumptions (i.e., their case tresholds are half of its base-case), society is able to avert a substantial number of deaths, reducing deaths from `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "deaths_per_100k", NMB_comparator == T)`
+Policy stringency (i.e., how stringent the case thresholds used to introduce or remove interventions) has a similar effect on the value of EWS relative to decision lags - the EWS provides the most value under the least desirable conditions for disease prevention. In a context where decision-makers are 50% more stringent than in our base-case assumptions (i.e., their case thresholds are half of its base-case), society is able to avert a substantial number of deaths, reducing mortality from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "deaths_per_100k", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 population without the EWS. In that scenario, the EWS yeilds `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "NMB", NMB_comparator == F)` dollars per person of net benefit since most of the deaths would already be prevented through more stringent NPIs. Conversely, lenient policy choises worsen overall outcomes but also imply a higher value of the enhanced surveillance system.
+
+### NPI effectiveness
+The effectiveness of NPIs to reduce transmission is a key unkonwn at the outset of a new pandemic. At our baseline parameterization, NPI effectiveness has a non-monotonic effect on the value of surveillance systems to pandemic response (Supplementary Figure X). If NPI effectiveness is 0%, an improved surveillance system has no value, as expected. The value of the enhanced surveillance system non-linearly increases with NPI effectiveness slowly for maximum NPI effectiveness below 50%, and peaked when the maximum NPI effectiveness reaches 60%, enough to reduce the baseline R0 of 2.5 below 1 at pandemic outset.  Beyond that point, increases in NPI effectiveness produce lower total costs, but reduce the value of the surveillance system since such betterFor a baseline R0 of 2.5, a maximum NPI effectiveness of 50% implies that even the maximum intervention level (i.e., a lockdown) is not able to reduce Rt below 1 at the outset of the pandemic.
 
 ### Policy stringency
 
-the total cost of the pandemic is  baseline  o have a detrimental effect If decision-makers take two weeks to introduce and implement NPIs 
+the total cost of the pandemic is baseline o have a detrimental effect If decision-makers take two weeks to introduce and implement NPIs 
 
 ### Decision lags and policy stringency
 
-In our base-line assumptions, we assumed decision-makers take one week to update their risk classification levels based on the epidemiological data. That decision lag includes both the time it takes for public health decision-makers to 
+In our baseline assumptions, we assumed decision-makers take one week to update their risk classification levels based on the epidemiological data. That decision lag includes both the time it takes for public health decision-makers to 
 
 ## Conditions for high-value pandemic response EW systems
 
@@ -101,6 +125,8 @@ Points from this section for discussion:
   + relative costs/severity of disease
 
 
+<!--
+
 # If we have time to look at those other cases:
 
 ## EWS and policy coordination
@@ -110,4 +136,4 @@ There is a concern that EWS data will need to be integrated to be useful. Howeve
 ## If we have time: Marginal Value of EWS
 EWS deployment also face decreasing marginal returns. The value of EWS decreases as coverage increases.
 
-
+-->
