--- a/reproduce-results.qmd
+++ b/reproduce-results.qmd
@@ -10,8 +10,6 @@ execute:
 author: "Pedro Nascimento de Lima"
 ---
 
-
-
 # Reproducibility notes
 
 This `quarto` document produces the results presented in *Nascimento de Lima et al. (2024). The value of environmental surveillance for pandemic response*. For details on how to install dependencies, see the `README.md` file. Before attempting to run this document, install all dependencies and run the `run_analysis.R` script. You should be able to reproduce all figures and tables from our paper using this document on a modern laptop within 30 minutes.
@@ -40,34 +38,26 @@ The model simulates disease percolating through six interconnected jurisdictions
 # Outcomes
 The average mortality per 100,000 population across the jurisdiction is the primary health outcome in this study. We also compute the cost of illness due to disease, using SARS-Cov-2 as the base-case scenario. We also account for economic costs caused by the nonpharmaceutical interventions introduced (discussed in the Supplementary Appendix). All outcomes are computed over a one-year time frame from the pandemic onset and are averages computed across the jurisdictions in our model. Since the model is stochastic, we simulate the model 1,000 times and present means and 95% prediction intervals (computed with the 2.5% and the 97.5% percentiles) of each outcome.
 
-# Inter-jurisdiction mixing
-We use the following approach to align a 
-
 # Calibration: Add as a footnote to tau.
 We use parameter estimates from the literature whenever possible (Supplementary Table 1). Parameters that are unobserved in the data, notably tau and. R0 is computed based on disease progression rates. We calibrate only the $tau$ parameter, which is highly heterogeneous and context-dependent (cite Laura), to match the number of deaths observed during the first year in the United States. We find that $tau = 0.137$. We explore the implication of a wider range of policy effectiveness in sensitivity analyses, and explore this particular parameter in more details. Surprisingly, the policy effectiveness  
 
 ## Sensitivity Analyses
 We explore the performance of the EWS under conditions that depart from COVID-19 by varying model parameters one at a time, aiming to represent a new emerging pathogen against which the population has no immunity. Since a probabilistic characterization of uncertainty to parameters is elusive, we refrain from making probabilistic statements 
 
- 
-
 # Results
+
+## Early warning systems can shape disease and policy dynamics
+
+**MAybe this is useful for a briefing or slides, but maybe not the paper**:
+An early warning system that shifts the epidemiological time-series used to inform non-pharmaceutical decisions can change the course of disease when used with effective interventions (Figure 1). We consider a network of jurisdictions that are independently managed by their own public health departments. For simplicity, we consider two cases: One in which the jurisdictions base their decisions upon syndromic surveillance data, and another (counterfactual) scenario where they are able to use data from environmental sampling sources (i.e., without loss of generality, wastewater surveillance), which lead the conventional surveillance data by a few days. The two sets of jurisdictions are otherwise equal, and face the exact same pandemic. 
 
 ## Value of EWS under baseline assumptions
 
 <!--EWS systems provide meaningful value under base-case assumptions representing a hypothetical new pandemic with parameters mirroring those of SARS-Cov-2. -->
-Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). The unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to illness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
 
-If policymakers follow the base-case NPI policy simulated in this paper, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` deaths per 100,000 population if no enhanced early-warning system (EWS) is adopted (NPIs w/o EWS scenario). As it was the case during the COVID-19 pandemic, such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` per person.
+Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). In the absence of any behavioral change, the unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to illness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
 
-
-```{r}
-#| label: tbl-1
-#| tbl-cap: Base-case results
-gt::gt(r$table_1)
-```
-
-Notes: All costs are expressed as 2020 dollars per person. All outcomes were computed over a one-year time frame.
+If policymakers followed the base-case NPI policy simulated in this paper, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` deaths per 100,000 population if no enhanced early-warning system (EWS) is adopted (NPIs w/o EWS scenario). As it was the case during the COVID-19 pandemic, such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` per person.
 
 Under baseline assumptions, the EWS provides net-positive value to society because they enhance the effectiveness of NPIs (i.e., preventing illness and death) more than they increase the costs of additional interventions introduced due to the early warning. Even an early warning system that provides only a 2-day early warning relative to a conventional pandemic response system (NPI + 2-day EWS scenario) is projected to reduce the pandemic death toll from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 2-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population. Health benefits increase if the system can provide earlier warning. A system that provides a 5-day early warning (NPIs + 5-day EWS scenario) would be projected to result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population, and a 10-day early warning would result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 10-day EWS", variable == "deaths_per_100k")` deaths per 100,000 people.
 
@@ -85,44 +75,19 @@ Points from this section for discussion:
 
 A pathogen that is 50% more transmissible than wild-type SARS-Cov-2 would pose a greater challenge for pandemic response, causing `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 people even if mitigated with the same NPI policy considered in our base-case scenario (Supplementary Table 2). Such a pandemic would cause a substantial societal cost of `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "C", NMB_comparator == T)` dollars per person. In those conditions, the EWS would be particularly valuable, reducing the death toll of the pandemic to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "deaths_per_100k", NMB_comparator == F)` per 100,000 people, and would be projected to provide a NMB of `r pull_estimate(r$table_1_long_all, Scenario == "1.5x transmissible", variable == "NMB", NMB_comparator == F)` dollars per person. Conversely, a pathogen that is 50% less transmissible than SARS-Cov-2 would result in a lower death toll of `r pull_estimate(r$table_1_long_all, Scenario == "0.5x transmissible", variable == "deaths_per_100k", NMB_comparator == T)` without the EWS system, reducing the net-monetary benefit of the system to `r pull_estimate(r$table_1_long_all, Scenario == "0.5x transmissible", variable == "NMB", NMB_comparator == F)` dollars per person. The value of the EWS system also depends on the infection fatality rate of the pathogen, but the net-benefit of the EWS would be positive even for a pathogen that is half as deadly as SARS-Cov-2. All else equal, the EWS would still yield an NMB of `r pull_estimate(r$table_1_long_all, Scenario == "0.5x deadly", variable == "NMB", NMB_comparator == F)` dollars per person in a pandemic caused by a pathogen that is 50% less deadly than SARS-Cov-2, and would yield `r pull_estimate(r$table_1_long_all, Scenario == "1.5x deadly", variable == "NMB", NMB_comparator == F)` dollars per person in responding to a pathogen that is 50% more deadly than COVID-19.
 
-```{r}
-#| label: fig-1
-#| fig-cap: Base-case results
-#| column: screen
-#| fig-format: svg
-#| out-width: 100%
-plot(r$fig_A_epi)
-```
+### NPI Costs
 
-Other socio-economic and contextual variables also have a meaningful effect on the value of EWS for pandemic response, including NPI costs, NPI effectiveness, decision lags and the stringency with which decision-makers introduce nonpharmaceutical interventions (Supplementary Figure 1).
+NPI costs had a moderate effect on the value of surveillance systems. If NPI costs were 50% higher than assumed in our base-case scenario (i.e., if achieving the same NPI effectiveness were to cost 50% more than assumed under our base-case scenario), then the total cost of the pandemic would increase from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x NPI costs", variable == "C", NMB_comparator == T)` dollars per person with the conventional surveillance system. (Supplementary Figure 1, **Supplementary Table X**). Despite that increase, the NMB of the system would be only marginally reduced from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "NMB", NMB_comparator == F)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x NPI costs", variable == "NMB", NMB_comparator == F)` dollars per person, because the EWS system only marginally increased the number of days under interventions.
 
 ### Policy lags and stringency
 
 Longer decision and implementation lags have an overall negative effect on the total costs of the pandemic, longer decision lags also would *increase* the net benefit of EWS systems for pandemic response. Our base-case scenario assume that decision-makers take one week to decide and implement non-pharmaceutical interventions. If instead policymakers took two weeks to introduce and implement interventions, the total pandemic cost increases from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "C", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == T)` dollars per person, assuming conventional surveillance. The early warning system effectively helps to roll-back decision lags, reducing total costs to `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "C", NMB_comparator == F)` dollars per person, yielding a NMB of `r pull_estimate(r$table_1_long_all, Scenario == "2-week decision lag", variable == "NMB", NMB_comparator == F)` relative to conventional surveillance. Conversely, in contexts where NPI implementation is swift (i.e, decisions are made within 3 days), the NMB of EWS would be lower but still positive at `r pull_estimate(r$table_1_long_all, Scenario == "3-day decision lag", variable == "NMB", NMB_comparator == F)` dollars per person.
 
-Policy stringency (i.e., how stringent the case thresholds used to introduce or remove interventions) has a similar effect on the value of EWS relative to decision lags - the EWS provides the most value under the least desirable conditions for disease prevention. In a context where decision-makers are 50% more stringent than in our base-case assumptions (i.e., their case thresholds are half of its base-case), society is able to avert a substantial number of deaths, reducing mortality from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "deaths_per_100k", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 population without the EWS. In that scenario, the EWS yeilds `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "NMB", NMB_comparator == F)` dollars per person of net benefit since most of the deaths would already be prevented through more stringent NPIs. Conversely, lenient policy choises worsen overall outcomes but also imply a higher value of the enhanced surveillance system.
+Policy stringency (i.e., how stringent the case thresholds used to introduce or remove interventions) has a similar effect on the value of EWS relative to decision lags - the EWS provides the most value under the least desirable conditions for disease prevention. In a context where decision-makers are 50% more stringent than in our base-case assumptions (i.e., their case thresholds are half of its base-case), society is able to avert a substantial number of deaths, reducing mortality from `r pull_estimate(r$table_1_long_all, Scenario == "Base-case", variable == "deaths_per_100k", NMB_comparator == T)` to `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "deaths_per_100k", NMB_comparator == T)` deaths per 100,000 population without the EWS. In that scenario, the EWS yields `r pull_estimate(r$table_1_long_all, Scenario == "1.5x stringent", variable == "NMB", NMB_comparator == F)` dollars per person of net benefit since most of the deaths would already be prevented through more stringent NPIs. Conversely, if policy makers were more lenient policy choices would change the syst overall outcomes but also imply a higher value of the enhanced surveillance system.
 
 ### NPI effectiveness
-The effectiveness of NPIs to reduce transmission is a key unkonwn at the outset of a new pandemic. At our baseline parameterization, NPI effectiveness has a non-monotonic effect on the value of surveillance systems to pandemic response (Supplementary Figure X). If NPI effectiveness is 0%, an improved surveillance system has no value, as expected. The value of the enhanced surveillance system non-linearly increases with NPI effectiveness slowly for maximum NPI effectiveness below 50%, and peaked when the maximum NPI effectiveness reaches 60%, enough to reduce the baseline R0 of 2.5 below 1 at pandemic outset.  Beyond that point, increases in NPI effectiveness produce lower total costs, but reduce the value of the surveillance system since such betterFor a baseline R0 of 2.5, a maximum NPI effectiveness of 50% implies that even the maximum intervention level (i.e., a lockdown) is not able to reduce Rt below 1 at the outset of the pandemic.
 
-### Policy stringency
-
-the total cost of the pandemic is baseline o have a detrimental effect If decision-makers take two weeks to introduce and implement NPIs 
-
-### Decision lags and policy stringency
-
-In our baseline assumptions, we assumed decision-makers take one week to update their risk classification levels based on the epidemiological data. That decision lag includes both the time it takes for public health decision-makers to 
-
-## Conditions for high-value pandemic response EW systems
-
-{Describe conditions under which value is lower or higher}
-
-Points from this section for discussion:
-
-* Value of EWS hinges on:
-  + timeliness of decision-making
-  + adherence to NPIs
-  + relative costs/severity of disease
+NPI effectiveness (i.e., the % reduction in infectious contacts caused by NPIs) had a non-monotonic effect on the value of surveillance systems to pandemic response (**Supplementary Figure X**). If NPI effectiveness is 0%, an improved surveillance system has no value, as expected. The value of the enhanced surveillance system increases with NPI effectiveness slowly for maximum NPI effectiveness below around 50%, and peaked when the maximum NPI effectiveness reaches 60%, enough to reduce the baseline R0 of 2.5 below 1 at pandemic outset. In general, we find that the value of the EWS peaks at a maximum NPI effectiveness value at $1-1/R0$, for different values of R0. Beyond that point, increases in NPI effectiveness result in lower total pandemic costs, but the value of the surveillance system starts to decrease.
 
 
 <!--
