more results draft updates

--- a/archive/reults-draft.Rmd
+++ b/archive/reults-draft.Rmd
@@ -31,31 +31,30 @@ if (!file.exists("./output/r.rds")) {
 Supplementary Table 1 provides details on parameter values used under our baseline scenario. The baseline scenario with conventional surveillance assumes a syndromic surveillance system based upon confirmed case counts, and there is a thirteen-day time span from exposure to the pathogen to detection by the public health authority. This thirteen-day lag covers the disease incubation phase (6.6 days)(cite) and testing and reporting delays (6 days).(cite) Consistent with estimates from the COVID-19 pandemic, the conventional surveillance system has a 30% case ascertainment rate.(cite) We assume the environmental sampling system can provide absolute, unbiased disease incidence estimates that lead the case counts by five days in the base-case scenario. We explore longer and shorter lead times, as this lag depends on two to ten days. We use 5 days as the base-case scenario, as wastewater surveillance systems have been able to demonstrate. (cite) Moreover, this analysis assumed that all the populations within the jurisdictions are covered by the EWS (or equivalently, that the sampled population is a representative sample of all the population).
 
 # Population
-The model simulates disease percolating through six interconnected jurisdictions that independently make nonpharmaceutical decisions. Individuals can travel and work across jurisdiction lines, and the six jurisdictions each have a population of 10^6 individuals. Mortality parameters were chosen to reflect mortality rates observed in the United States during the first year of the COVID-19 pandemic; hence our results can be interpreted as expected outcomes for a cluster of US counties.
+The model simulates disease percolating through six interconnected jurisdictions that independently make nonpharmaceutical decisions. Individuals can travel and work across jurisdiction lines, and the six jurisdictions each have a population of 10^6 individuals. Mortality parameters were chosen to reflect mortality rates observed in the United States during the first year of the COVID-19 pandemic; hence, our results can be interpreted as expected outcomes for a cluster of US counties.
 
 # Outcomes
-The average mortality per 100,000 population across the jurisdiction is the primary health outcome in this study. We also compute the cost of illness due to disease, using SARS-Cov-2 as the base-case scenario. We also account for economic costs caused by the nonpharmaceutical interventions introduced (discussed in the Supplementary Appendix). All outcomes are computed over a one-year time frame from the pandemic onset and are averages computed across the jurisdictions in our model. Since the model is stochastic, we simulate the model 1,000 times and present means and 95% prediction intervals (computed with the 2.5% and the 97.5% percentiles) of each outcome.
+The average mortality per 100,000 population across the jurisdiction is the primary health outcome in this study. We also compute the cost of illness due to disease, using SARS-Cov-2 as the base-case scenario. We also account for economic costs caused by the nonpharmaceutical interventions introduced (discussed in the Supplementary Appendix). All outcomes are computed over one year from the pandemic onset and are averages computed across the jurisdictions in our model. Since the model is stochastic, we simulate the model 1,000 times and present means and 95% prediction intervals (calculated with the 2.5% and the 97.5% percentiles) of each outcome.
 
-# Calibration: Add as a footnote to tau.
-We use parameter estimates from the literature whenever possible (Supplementary Table 1). Parameters that are unobserved in the data, notably tau and. R0 is computed based on disease progression rates. We calibrate only the $tau$ parameter, which is highly heterogeneous and context-dependent (cite Laura), to match the number of deaths observed during the first year in the United States. We find that $tau = 0.137$. We explore the implication of a wider range of policy effectiveness in sensitivity analyses and explore this particular parameter in more detail.
+# Calibration
+We used parameter estimates from the literature whenever possible (Supplementary Table 1). However, two of our model parameters need calibration so that model outcomes in our base-case surveillance scenario match the number of deaths observed in the US during the first year of the COVID-19 pandemic. We calibrate two parameters that cannot be directly observed from data: $tau$ and $c$. Our calibration procedure uses two data targets: i) the average number of COVID-19 deaths per 100,000 population from March 1st 2020 to March 1st 2021 in US states, and ii) the median number of days spent at the highest intervention level adopted in US states, defined as a Policy Stringency of 95% or more relative to the maximum NPI stringency level, as measured by the Oxford COVID-19 NPI policy database. We compute a mean square error distance function, equally weighing the deaths and the days under maximum intervention level,  choosing $tau$ and $c$ to minimize that distance function. In this calibration exercise, $tau = 0.14$, and $c = 17.8$, which are plausible values. As a validation target, we observed taht the epidemic size at the end of the first year of the pandemic was on the order of 30% (cite specific numbers), which is above US-level seroprevalence survey estimates at that point in time (~20%). Since seroprevalence surveys only provide a lower bound to the epidemic size due to waning immunity, we found our calibration to appropriately capture the order of magnitude of reduction in mixing caused by NPI policies, under the assumption that the baseline R0 in the US was 2.5.
+
+ the optimization search    R0 is computed based on disease progression rates. We calibrate only the $tau$ parameter, which is highly heterogeneous and context-dependent (cite Laura), to match the number of deaths observed during the first year in the United States. We find that $tau = 0.137$. We explore the implication of a wider range of policy effectiveness in sensitivity analyses and explore this particular parameter in more detail.
 
 ## Sensitivity Analyses
-We explore the performance of the EWS under conditions that depart from COVID-19 by varying model parameters one at a time, aiming to represent a new emerging pathogen against which the population has no immunity. Since a probabilistic characterization of uncertainty to parameters is elusive, we refrain from making probabilistic statements 
+We explore the performance of the EWS under conditions that depart from COVID-19 by varying model parameters one at a time, aiming to represent a new emerging pathogen for which the population has no immunity.
 
 # Results
 
 ## Early warning systems can shape disease and policy dynamics
 
-**MAybe this is useful for a briefing or slides, but maybe not the paper**:
-An early warning system that shifts the epidemiological time-series used to inform non-pharmaceutical decisions can change the course of disease when used with effective interventions (Figure 1). We consider a network of jurisdictions that are independently managed by their own public health departments. For simplicity, we consider two cases: One in which the jurisdictions base their decisions upon syndromic surveillance data, and another (counterfactual) scenario where they are able to use data from environmental sampling sources (i.e., without loss of generality, wastewater surveillance), which lead the conventional surveillance data by a few days. The two sets of jurisdictions are otherwise equal, and face the exact same pandemic. 
+An early warning system that shifts the epidemiological time series used to inform non-pharmaceutical decisions can change the course of the pandemic with effective interventions (Figure 1). We consider a network of jurisdictions managed by independent public health departments. For simplicity, we consider two cases: One in which the jurisdictions base their decisions upon syndromic surveillance and another (counterfactual) scenario where they can use data from environmental sampling sources (i.e., without loss of generality, wastewater surveillance), which leads syndromic surveillance data by a few days. The two sets of jurisdictions are otherwise equal and face the same pandemic. 
 
 ## Value of EWS under baseline assumptions
 
-<!--EWS systems provide meaningful value under base-case assumptions representing a hypothetical new pandemic with parameters mirroring those of SARS-Cov-2. -->
+Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). In the absence of any behavioral change, the unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, costing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to illness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
 
-Assuming no NPIs interventions are put in place (No NPIs scenario), a new COVID-19-like pandemic would produce significant damage, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` deaths per 100,000 people [mean (95% prediction interval of stochastic replications)] over a one-year time-frame (Table 1). In the absence of any behavioral change, the unmitigated pandemic would infect `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "epi_size")` percent of the population, causing `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_illness")` dollars per person due to illness, and `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH_deaths")` dollars due to deaths. The total health cost would be projected at `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "CH")` dollars per person.
-
-If policymakers followed the base-case NPI policy simulated in this paper, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` deaths per 100,000 population if no enhanced early-warning system (EWS) is adopted (NPIs w/o EWS scenario). As it was the case during the COVID-19 pandemic, such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` per person.
+If policymakers followed our base-case NPI policy, the death toll of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` deaths per 100,000 population if a baseline syndromic surveillance system is used to trigger NPIs (NPIs w/o EWS scenario). Such an achievement would involve a substantial public health effort. Under baseline assumptions, this effort would require `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L1plus_days")` days of public health interventions, of which `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "L5_days")` days are spent under the most-restrictive policy intervention level. We project this effort to cost on the order of `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "CNPI")` per person. Based on those assumptions, the total cost of the pandemic would be reduced from `r pull_estimate(r$table_1_long, Scenario == "No NPIs", variable == "C")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "C")` per person.
 
 Under baseline assumptions, the EWS provides net-positive value to society because they enhance the effectiveness of NPIs (i.e., preventing illness and death) more than they increase the costs of additional interventions introduced due to the early warning. Even an early warning system that provides only a 2-day early warning relative to a conventional pandemic response system (NPI + 2-day EWS scenario) is projected to reduce the pandemic death toll from `r pull_estimate(r$table_1_long, Scenario == "NPIs w/o EWS", variable == "deaths_per_100k")` to `r pull_estimate(r$table_1_long, Scenario == "NPIs + 2-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population. Health benefits increase if the system can provide earlier warning. A system that provides a 5-day early warning (NPIs + 5-day EWS scenario) would be projected to result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 5-day EWS", variable == "deaths_per_100k")` deaths per 100,000 population, and a 10-day early warning would result in `r pull_estimate(r$table_1_long, Scenario == "NPIs + 10-day EWS", variable == "deaths_per_100k")` deaths per 100,000 people.
 
